SET NAMES utf8;
SET time_zone = '+00:00';
SET foreign_key_checks = 0;
SET sql_mode = 'NO_AUTO_VALUE_ON_ZERO';

-- 1. Borrar la base de datos si existe
DROP DATABASE IF EXISTS samplevault;
CREATE DATABASE samplevault;
USE samplevault;

-- 2. Configuración de usuario de DB (Restricción de privilegios)
-- Primero creamos la identidad (si no existe)
CREATE USER IF NOT EXISTS 'samplevault'@'%' IDENTIFIED BY 'samplevault';

-- Luego asignamos los permisos específicos
-- Arquitectura de seguridad conocida como el "Principio de Menor Privilegio"
-- Aplicamos SELECT para lectura y EXECUTE para poder invocar los Stored Procedures.
-- Esto impide INSERT, UPDATE y DELETE directos desde el código de la aplicación.
GRANT SELECT, EXECUTE ON samplevault.* TO 'samplevault'@'%';

-- 3. Tabla de Roles (Normalización)
CREATE TABLE roles (
    id INT AUTO_INCREMENT PRIMARY KEY,
    name VARCHAR(20) NOT NULL UNIQUE
);

-- 4. Tabla de Usuarios (Sin el campo role ENUM)
CREATE TABLE users (
    id INT AUTO_INCREMENT PRIMARY KEY,
    username VARCHAR(50) NOT NULL UNIQUE,
    password VARCHAR(255) NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

-- 5. Tabla Intermedia: users_roles (Relación Muchos a Muchos)
CREATE TABLE users_roles (
    user_id INT NOT NULL,
    role_id INT NOT NULL,
    PRIMARY KEY (user_id, role_id),
    FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE,
    FOREIGN KEY (role_id) REFERENCES roles(id) ON DELETE CASCADE
);

-- 6. Tabla de Samples
CREATE TABLE samples (
    id INT AUTO_INCREMENT PRIMARY KEY,
    user_id INT NOT NULL,
    filename VARCHAR(255) NOT NULL,
    display_name VARCHAR(100) NOT NULL,
    category VARCHAR(50),
    bpm INT DEFAULT 0,
    file_path VARCHAR(255) NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE
);

-- ==========================================================
-- 7. PROCEDIMIENTOS ALMACENADOS (Stored Procedures)
-- ==========================================================

DELIMITER //

-- --- PROCEDIMIENTOS PARA USERS ---

-- Buscar usuario por username (con su rol)
CREATE PROCEDURE sp_find_user_by_username(IN p_username VARCHAR(50))
BEGIN
    SELECT u.*, r.name as role 
    FROM users u
    JOIN users_roles ur ON u.id = ur.user_id
    JOIN roles r ON ur.role_id = r.id
    WHERE u.username = p_username;
END //

-- Crear nuevo usuario y asignar rol por nombre
CREATE PROCEDURE sp_create_user(
    IN p_username VARCHAR(50), 
    IN p_password VARCHAR(255), 
    IN p_role_name VARCHAR(20)
)
BEGIN
    DECLARE v_user_id INT;
    DECLARE v_role_id INT;

    INSERT INTO users (username, password) VALUES (p_username, p_password);
    SET v_user_id = LAST_INSERT_ID();

    SELECT id INTO v_role_id FROM roles WHERE name = p_role_name;
    INSERT INTO users_roles (user_id, role_id) VALUES (v_user_id, v_role_id);
    
    SELECT v_user_id as insertId;
END //

-- Listar todos los usuarios
CREATE PROCEDURE sp_find_all_users()
BEGIN
    SELECT u.id, u.username, r.name as role, u.created_at 
    FROM users u
    JOIN users_roles ur ON u.id = ur.user_id
    JOIN roles r ON ur.role_id = r.id;
END //

-- Borrar usuario
CREATE PROCEDURE sp_delete_user(IN p_id INT)
BEGIN
    DELETE FROM users WHERE id = p_id;
END //

-- Sembrar roles maestros
CREATE PROCEDURE sp_seed_roles()
BEGIN
    INSERT INTO roles (name) VALUES ('admin'), ('producer');
END //

-- Sembrar samples de prueba
CREATE PROCEDURE sp_seed_samples()
BEGIN
    INSERT INTO samples (user_id, filename, display_name, category, bpm, file_path) VALUES
    (2, 'DRUM_LOOP_01.wav', 'Drum Loop 01', 'Drums', 120, '/uploads/seed/DRUM_LOOP_01.wav'),
    (2, 'FX_CONGA_1.WAV', 'FX Conga 1', 'Percussion', 100, '/uploads/seed/FX_CONGA_1.WAV'),
    (2, 'HIHAT_1.wav', 'HiHat 1', 'Drums', 128, '/uploads/seed/HIHAT_1.wav');
END //

-- Resetear datos de prueba (truncar + re-sembrar)
-- Corre con SQL SECURITY DEFINER (privilegios de root) para permitir TRUNCATE
CREATE PROCEDURE sp_reset_test_data()
BEGIN
    SET FOREIGN_KEY_CHECKS = 0;
    TRUNCATE TABLE samples;
    TRUNCATE TABLE users_roles;
    TRUNCATE TABLE users;
    TRUNCATE TABLE roles;
    SET FOREIGN_KEY_CHECKS = 1;

    CALL sp_seed_roles();
    CALL sp_create_user('admin', '$2b$10$.n0s847tiSxBqDvIo6Vg5ujXC5zIUmm98bTjBWnRdqX9CxxbIo7wS', 'admin');
    CALL sp_create_user('pepe', '$2b$10$.n0s847tiSxBqDvIo6Vg5ujXC5zIUmm98bTjBWnRdqX9CxxbIo7wS', 'producer');
    CALL sp_seed_samples();
END //

-- --- PROCEDIMIENTOS PARA SAMPLES ---

-- Crear Sample
CREATE PROCEDURE sp_create_sample(
    IN p_user_id INT,
    IN p_filename VARCHAR(255),
    IN p_display_name VARCHAR(100),
    IN p_category VARCHAR(50),
    IN p_bpm INT,
    IN p_file_path VARCHAR(255)
)
BEGIN
    INSERT INTO samples (user_id, filename, display_name, category, bpm, file_path)
    VALUES (p_user_id, p_filename, p_display_name, p_category, p_bpm, p_file_path);
    SELECT LAST_INSERT_ID() as insertId;
END //

-- Listar samples por usuario
CREATE PROCEDURE sp_find_samples_by_user(IN p_user_id INT)
BEGIN
    SELECT * FROM samples WHERE user_id = p_user_id;
END //

-- Buscar sample específico (Validando dueño)
CREATE PROCEDURE sp_find_sample_by_id(IN p_id INT, IN p_user_id INT)
BEGIN
    SELECT * FROM samples WHERE id = p_id AND user_id = p_user_id;
END //

-- Borrar sample (Validando dueño)
CREATE PROCEDURE sp_delete_sample(IN p_id INT, IN p_user_id INT)
BEGIN
    DELETE FROM samples WHERE id = p_id AND user_id = p_user_id;
END //

-- Buscar sample por ID únicamente (sin filtro de dueño)
CREATE PROCEDURE sp_find_sample_by_id_only(IN p_id INT)
BEGIN
    SELECT * FROM samples WHERE id = p_id;
END //

DELIMITER ;

-- 8. Datos de prueba iniciales (vía SP, después de creados)
CALL sp_reset_test_data();

SET foreign_key_checks = 1;